BERT example v3 (with sentence_context included)

--- a/examples/output/1810.04805_A.5_Illustrations_of_Fine-tuning_on_Different_Tasks_entities.json
+++ b/examples/output/1810.04805_A.5_Illustrations_of_Fine-tuning_on_Different_Tasks_entities.json
@@ -6,6 +6,10 @@
       "start_pos": 32,
       "end_pos": 36
     },
+    "attributes": {},
+    "sentence_context": "The illustration of fine-tuning BERT on different tasks can be seen in Figure 4. Our task-specific models are formed by incorporating BERT with one additional output layer, so a minimal number of parameters need to be learned from scratch.",
+    "sentence_index": 0,
+    "span_text": "BERT",
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
   {
@@ -15,6 +19,10 @@
       "start_pos": 315,
       "end_pos": 340
     },
+    "attributes": {},
+    "sentence_context": "Our task-specific models are formed by incorporating BERT with one additional output layer, so a minimal number of parameters need to be learned from scratch. MNLI Multi-Genre Natural Language Inference is a large-scale, crowdsourced entailment classification task. Given a pair of sentences, the goal is to predict whether the second sentence is an entailment, contradiction, or neutral with respect to the first one.",
+    "sentence_index": 2,
+    "span_text": "entailment classification",
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
   {
@@ -24,6 +32,10 @@
       "start_pos": 240,
       "end_pos": 283
     },
+    "attributes": {},
+    "sentence_context": "Our task-specific models are formed by incorporating BERT with one additional output layer, so a minimal number of parameters need to be learned from scratch. MNLI Multi-Genre Natural Language Inference is a large-scale, crowdsourced entailment classification task. Given a pair of sentences, the goal is to predict whether the second sentence is an entailment, contradiction, or neutral with respect to the first one.",
+    "sentence_index": 2,
+    "span_text": "MNLI Multi-Genre Natural Language Inference",
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
   {
@@ -33,6 +45,10 @@
       "start_pos": 529,
       "end_pos": 550
     },
+    "attributes": {},
+    "sentence_context": "Given a pair of sentences, the goal is to predict whether the second sentence is an entailment, contradiction, or neutral with respect to the first one. QP Quora Question Pairs is a binary classification task where the goal is to determine if two questions asked on Quora are semantically equivalent. QNLI Question Natural Language Inference is a version of the Stanford Question Answering Dataset which has been converted to a binary classification task.",
+    "sentence_index": 4,
+    "span_text": "binary classification",
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
   {
@@ -42,6 +58,10 @@
       "start_pos": 500,
       "end_pos": 523
     },
+    "attributes": {},
+    "sentence_context": "Given a pair of sentences, the goal is to predict whether the second sentence is an entailment, contradiction, or neutral with respect to the first one. QP Quora Question Pairs is a binary classification task where the goal is to determine if two questions asked on Quora are semantically equivalent. QNLI Question Natural Language Inference is a version of the Stanford Question Answering Dataset which has been converted to a binary classification task.",
+    "sentence_index": 4,
+    "span_text": "QP Quora Question Pairs",
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
   {
@@ -51,6 +71,10 @@
       "start_pos": 529,
       "end_pos": 550
     },
+    "attributes": {},
+    "sentence_context": "Given a pair of sentences, the goal is to predict whether the second sentence is an entailment, contradiction, or neutral with respect to the first one. QP Quora Question Pairs is a binary classification task where the goal is to determine if two questions asked on Quora are semantically equivalent. QNLI Question Natural Language Inference is a version of the Stanford Question Answering Dataset which has been converted to a binary classification task.",
+    "sentence_index": 4,
+    "span_text": "binary classification",
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
   {
@@ -60,6 +84,10 @@
       "start_pos": 648,
       "end_pos": 688
     },
+    "attributes": {},
+    "sentence_context": "QP Quora Question Pairs is a binary classification task where the goal is to determine if two questions asked on Quora are semantically equivalent. QNLI Question Natural Language Inference is a version of the Stanford Question Answering Dataset which has been converted to a binary classification task. The positive examples are (question, sentence) pairs which do contain the correct answer, and the negative examples are (question, sentence) from the same paragraph which do not contain the answer.",
+    "sentence_index": 5,
+    "span_text": "QNLI Question Natural Language Inference",
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
   {
@@ -69,6 +97,10 @@
       "start_pos": 709,
       "end_pos": 744
     },
+    "attributes": {},
+    "sentence_context": "QP Quora Question Pairs is a binary classification task where the goal is to determine if two questions asked on Quora are semantically equivalent. QNLI Question Natural Language Inference is a version of the Stanford Question Answering Dataset which has been converted to a binary classification task. The positive examples are (question, sentence) pairs which do contain the correct answer, and the negative examples are (question, sentence) from the same paragraph which do not contain the answer.",
+    "sentence_index": 5,
+    "span_text": "Stanford Question Answering Dataset",
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
   {
@@ -78,6 +110,10 @@
       "start_pos": 807,
       "end_pos": 824
     },
+    "attributes": {},
+    "sentence_context": "QNLI Question Natural Language Inference is a version of the Stanford Question Answering Dataset which has been converted to a binary classification task. The positive examples are (question, sentence) pairs which do contain the correct answer, and the negative examples are (question, sentence) from the same paragraph which do not contain the answer.",
+    "sentence_index": 6,
+    "span_text": "positive examples",
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   },
   {
@@ -87,6 +123,10 @@
       "start_pos": 901,
       "end_pos": 918
     },
+    "attributes": {},
+    "sentence_context": "QNLI Question Natural Language Inference is a version of the Stanford Question Answering Dataset which has been converted to a binary classification task. The positive examples are (question, sentence) pairs which do contain the correct answer, and the negative examples are (question, sentence) from the same paragraph which do not contain the answer.",
+    "sentence_index": 6,
+    "span_text": "negative examples",
     "section": "A.5 Illustrations of Fine-tuning on Different Tasks"
   }
 ]
