--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,13 @@ dependencies = [
     "google-genai>=1.45.0",
     "langextract>=1.0.9",
     "lxml>=6.0.2",
+    "numpy>=2.3.4",
     "pydantic>=2.12.3",
     "pydantic-settings>=2.11.0",
+    "scikit-learn>=1.7.2",
+    "sentence-transformers>=5.1.2",
     "spacy>=3.8.7",
+    "torch>=2.9.0",
 ]
 
 [dependency-groups]
